# LC3-virtual-machine

./: CMakeLists.txt  README.md
docs/examples/: HelloWorld.lst  HelloWorld.sym  rogue.asm
include/: lc3-vm.h  lc3.h  lc3_LC3.h  lc3_Memory.h  lc3_RegisterFile.h  lc3_bit.h  lc3_types.h
include/LC3VM/: Bit.h  Memory.h  RegisterFile.h  Types.h  VM.h  lc3.h  lc3_LC3.h  lc3_Memory.h  lc3_RegisterFile.h  lc3_bit.h  lc3_precompiled.h  lc3_types.h
src/: Bit.cpp  LC3.cpp  Memory.cpp  Operations.cpp  Platform.cpp  RegisterFile.cpp  Traps.cpp  lc3_LC3.cpp  lc3_Memory.cpp  lc3_RegisterFile.cpp  lc3_bit.cpp  lc3_operations.cpp  lc3_platform.cpp  lc3_traps.cpp  vm.cpp  vm_base.cpp  vm_operations.cpp  vm_traps.cpp
